<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CustumSettings"
    android:background="@color/colorPrimary"
    android:padding="5pt">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tHistorico"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/latolight"
                android:text="@string/custumTitle"
                android:textColor="@color/colorSecundary"
                android:textSize="35sp"
                android:padding="5pt" />
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NumJog"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/latoblack"/>

                <NumberPicker
                    android:id="@+id/np1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:solidColor="@color/colorPrimary"
                    android:layout_alignParentRight="true">
                </NumberPicker>

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NumCar"
                    android:layout_alignParentLeft="true"
                    android:layout_centerVertical="true"
                    android:fontFamily="@font/latoblack"/>

                <NumberPicker
                    android:id="@+id/np2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:solidColor="@color/colorPrimary"
                    android:layout_alignParentRight="true">
                </NumberPicker>

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">


                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/RR"
                    android:fontFamily="@font/latoblack"/>

                <Switch
                    android:id="@+id/sw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:layout_marginRight="20dp"
                    />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/Random"
                    android:fontFamily="@font/latoblack"/>


            </LinearLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_centerVertical="true"
                        android:id="@+id/numeroRondas"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignTop="@+id/np3"
                        android:layout_marginTop="78dp"
                        android:text="@string/NumRond"
                        android:fontFamily="@font/latoblack"/>


                    <CheckBox
                        android:id="@+id/checkbox"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@+id/numeroRondas"
                        android:fontFamily="@font/latoblack"
                        android:text="@string/Random" />

                <NumberPicker

                    android:layout_alignParentRight="true"
                    android:id="@+id/np3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/latoregular"
                    android:solidColor="@color/colorPrimary">
                </NumberPicker>

                </RelativeLayout>



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center">

                <Button
                    android:onClick="onClick"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:text="@string/Next"
                    android:background="@drawable/orangebutton"
                    android:fontFamily="@font/latoblack"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</RelativeLayout>